ajustando seção "Sobre mim" e "Habilidades"

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
         <link href="assets/css/style.css" rel="stylesheet" />
     </head>
+
     <body class="bg-gray-50 text-gray-800">
         <!-- Header fixo no topo -->
         <header class="sticky top-0 z-50 bg-gradient-to-r from-blue-700 to-blue-900 text-white py-6 shadow-lg">
@@ -30,29 +31,40 @@
         </header>
         <!-- Sobre Mim -->
         <section id="sobre" class="container mx-auto px-4 py-16 fade-in">
-            <h2 class="text-3xl font-bold text-center mb-6">Sobre Mim</h2>
-            <p class="max-w-3xl mx-auto text-center text-lg leading-relaxed">
-                Sou desenvolvedor PHP com experiência em MVC, MySQL, jQuery e CSS. Tenho 10 meses de estágio e mais de 1 ano como PJ, criando sistemas internos e landing pages.
-                Apaixonado por código limpo, funcional e com boa usabilidade.<br /><br />
-                Busco oportunidades para aprimorar meus conhecimentos em desenvolvimento backend e frontend, contribuindo com projetos que valorizem qualidade e eficiência no código.
-            </p>
+        <h2 class="text-3xl font-bold text-center mb-6">Sobre Mim</h2>
+        <p class="max-w-3xl mx-auto text-center text-lg leading-relaxed">
+            Trabalho com PHP desde 2023, tendo atuado 10 meses como estagiário e, a partir de julho de 2025, como profissional PJ. Atualmente, sou responsável por ajustar e aprimorar sistemas internos, criando relatórios, gráficos e exportações para CSV e Excel, além de gerar QR Codes para URLs conforme a necessidade.
+            <br /><br />
+            Desenvolvo seguindo o padrão MVC, estruturando Model, View e Controller para garantir organização e escalabilidade no código. Também trabalho com Ajax, JavaScript, jQuery e CSS para construir interfaces dinâmicas e responsivas.
+            <br /><br />
+            Tenho experiência em manipulação de bancos de dados, inserindo e recuperando informações para alimentar as funcionalidades mencionadas. Além disso, utilizo JSON para integração e verificação de APIs externas, garantindo a troca de dados eficiente entre sistemas.
+            <br /><br />
+            Sou apaixonado por código limpo, funcional e com boa usabilidade, sempre buscando soluções que agreguem valor ao negócio e facilitem o trabalho da equipe.
+        </p>
         </section>
+
         <!-- Habilidades -->
         <section id="habilidades" class="bg-white py-16 fade-in">
             <div class="container mx-auto px-4">
                 <h2 class="text-3xl font-bold text-center mb-10">Habilidades</h2>
+                <p class="max-w-3xl mx-auto text-center mb-10 text-lg leading-relaxed">
+                    Possuo conhecimento sólido em desenvolvimento backend e frontend, com foco em linguagens e ferramentas que facilitam a criação de sistemas eficientes, escaláveis e com boa usabilidade.
+                </p>
                 <div class="grid grid-cols-2 md:grid-cols-4 gap-6 text-center">
                     <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">PHP</div>
                     <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">MySQL</div>
-                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">MVC</div>
-                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">jQuery</div>
-                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">CSS</div>
-                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">HTML</div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">
+                        MVC <span style="opacity: 0.7; font-size: 0.75rem; display: block;">(Model-View-Controller)</span>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">jQuery & AJAX</div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">JavaScript</div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">CSS3 & HTML5</div>
                     <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">Bootstrap</div>
-                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">AJAX</div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">JSON & APIs</div>
                 </div>
             </div>
         </section>
+
         <!-- Projetos -->
         <section id="projetos" class="container mx-auto px-4 py-16 fade-in">
             <h2 class="text-3xl font-bold text-center mb-10">Projetos</h2>
