ajuste no title da pagina

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Portfólio - Samuel Lacerda</title>
+        <title>Samuel Lacerda - PHP Full Stack Júnior</title>
         <!-- SEO Básico -->
         <meta name="description" content="Portfólio de Samuel Lacerda, Desenvolvedor PHP Full Stack Júnior, com projetos em PHP, MVC, MySQL, jQuery e CSS." />
         <meta name="author" content="Samuel Lacerda" />
