--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">jQuery & AJAX</div>
                     <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">JavaScript</div>
-                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">CSS3 & HTML5</div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">CSS & HTML</div>
                     <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">Bootstrap</div>
                     <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">JSON & APIs</div>
                 </div>
@@ -128,6 +128,9 @@
                 </p>
                 <p class="mb-4">
                     GitHub: <a href="https://github.com/samuelllinhares" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">github.com/samuelllinhares</a>
+                </p>
+                <p>
+                    LinkedIn: <a href="https://linkedin.com/in/seu-perfil" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">linkedin.com/in/seu-perfil</a>
                 </p>
             </div>
         </section>
