--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script src="https://cdn.tailwindcss.com"></script>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
         <link href="assets/css/style.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     </head>
 
     <body class="bg-gray-50 text-gray-800">
@@ -33,7 +34,7 @@
         <section id="sobre" class="container mx-auto px-4 py-16 fade-in">
             <h2 class="text-3xl font-bold text-center mb-6">Sobre Mim</h2>
             <p class="max-w-3xl mx-auto text-center text-lg leading-relaxed">
-                Trabalho com PHP desde 2023, tendo atuado 10 meses como estagiário e, a partir de julho de 2025, como profissional PJ. Atualmente, sou responsável por ajustar e aprimorar sistemas internos, criando relatórios, gráficos e exportações para CSV e Excel, além de gerar QR Codes para URLs conforme a necessidade.
+                Trabalho com PHP desde junho de 2023, começando como estagiário e, a partir de julho de 2025, atuando como profissional PJ. Atualmente, sou responsável por ajustar e aprimorar sistemas internos, criando relatórios, gráficos e exportações para CSV e Excel, além de gerar QR Codes para URLs conforme a necessidade.
                 <br /><br />
                 Desenvolvo seguindo o padrão MVC, estruturando Model, View e Controller para garantir organização e escalabilidade no código. Também trabalho com Ajax, JavaScript, jQuery e CSS para construir interfaces dinâmicas e responsivas.
                 <br /><br />
@@ -79,16 +80,10 @@
                         <p class="mb-4">LP desenvolvida para divulgação de aulas de música online e presenciais.</p>
                         <div class="flex gap-3">
                             <a href="https://samuelllinhares.github.io/lp-music/" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 bg-blue-600 hover:bg-blue-800 text-white px-4 py-2 rounded transition">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M14 3h7v7m0 0L10 21l-7-7 11-11z" />
-                                </svg>
-                                Ver Projeto
+                                <i class="bi bi-box-arrow-up-right"></i>Ver Projeto
                             </a>
                             <a href="https://github.com/samuelllinhares/lp-music" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 bg-gray-700 hover:bg-gray-900 text-white px-4 py-2 rounded transition">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24">
-                                    <path d="M12 2C6.48 2 2 6.48 2 12c0 4.42 2.87 8.17 6.84 9.5.5.09.66-.21.66-.47 0-.23-.01-.85-.01-1.67-2.78.6-3.37-1.34-3.37-1.34-.45-1.16-1.11-1.47-1.11-1.47-.91-.62.07-.61.07-.61 1.01.07 1.54 1.04 1.54 1.04.9 1.54 2.36 1.1 2.94.84.09-.65.35-1.1.64-1.36-2.22-.26-4.56-1.12-4.56-4.97 0-1.1.39-2 .1-2.7 0 0 .84-.27 2.75 1.03a9.6 9.6 0 012.5-.34c.85.01 1.7.12 2.5.34 1.91-1.3 2.75-1.03 2.75-1.03.42 1.5.12 2.56.06 2.83.63.71 1.02 1.57 1.02 2.68 0 3.87-2.34 4.71-4.57 4.97.36.31.69.92.69 1.86 0 1.34-.01 2.43-.01 2.76 0 .27.16.57.67.47A10.015 10.015 0 0022 12c0-5.52-4.48-10-10-10z" />
-                                </svg>
-                                Ver Código
+                                <i class="bi bi-github"></i>Ver Código
                             </a>
                         </div>
                     </div>
@@ -103,10 +98,7 @@
                         <p class="mb-4">Sistema interno em PHP MVC para gestão de alunos, matérias e instrumentos.</p>
                         <div class="flex gap-3">
                             <a href="https://music-class.infinityfree.me/login" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 bg-blue-600 hover:bg-blue-800 text-white px-4 py-2 rounded transition">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M14 3h7v7m0 0L10 21l-7-7 11-11z" />
-                                </svg>
-                                Ver Projeto
+                                <i class="bi bi-box-arrow-up-right"></i>Ver Projeto
                             </a>
                         </div>
                     </div>
@@ -115,16 +107,19 @@
         </section>
         <!-- Contato -->
         <section id="contato" class="bg-white py-16 fade-in">
-            <div class="container mx-auto px-4 text-center max-w-lg mx-auto">
+            <div class="container mx-auto px-4 text-center max-w-lg">
                 <h2 class="text-3xl font-bold mb-6">Contato</h2>
-                <p class="mb-4">
-                    Email: <a href="mailto:samuelllinhares@gmail.com" class="text-blue-600 hover:underline">slacerda735@gmail.com</a>
+                <p class="mb-4 flex items-center justify-center gap-2">
+                    <i class="bi bi-envelope-fill text-blue-600"></i>
+                    <a href="mailto:samuelllinhares@gmail.com" class="text-blue-600 hover:underline">samuelllinhares@gmail.com</a>
                 </p>
-                <p class="mb-4">
-                    GitHub: <a href="https://github.com/samuelllinhares" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">github.com/samuelllinhares</a>
+                <p class="mb-4 flex items-center justify-center gap-2">
+                    <i class="bi bi-github text-blue-600"></i>
+                    <a href="https://github.com/samuelllinhares" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">github.com/samuelllinhares</a>
                 </p>
-                <p>
-                    LinkedIn: <a href="https://linkedin.com/in/seu-perfil" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">linkedin.com/in/seu-perfil</a>
+                <p class="flex items-center justify-center gap-2">
+                    <i class="bi bi-linkedin text-blue-600"></i>
+                    <a href="https://www.linkedin.com/in/samuel-lacerda-ribeiro-bruno-1a9329193/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">linkedin.com/in/samuel-lacerda-ribeiro-bruno</a>
                 </p>
             </div>
         </section>
