--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <h2 class="text-3xl font-bold mb-6">Contato</h2>
                 <p class="mb-4 flex items-center justify-center gap-2">
                     <i class="bi bi-envelope-fill text-blue-600"></i>
-                    <a href="mailto:samuelllinhares@gmail.com" class="text-blue-600 hover:underline">samuelllinhares@gmail.com</a>
+                    <a href="mailto:slacerda735@gmail.com" class="text-blue-600 hover:underline">slacerda735@gmail.com</a>
                 </p>
                 <p class="mb-4 flex items-center justify-center gap-2">
                     <i class="bi bi-github text-blue-600"></i>
