Alterando nome do git

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
                         <h3 class="text-xl font-bold mb-2">Landing Page - Escola de Musica</h3>
                         <p class="mb-4">LP desenvolvida para divulgação de aulas de música online e presenciais.</p>
                         <div class="flex gap-3">
-                            <a href="https://samuelllinhares.github.io/lp-music/" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 bg-blue-600 hover:bg-blue-800 text-white px-4 py-2 rounded transition">
+                            <a href="https://samuellacerdarb.github.io/lp-music/" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 bg-blue-600 hover:bg-blue-800 text-white px-4 py-2 rounded transition">
                                 <i class="bi bi-box-arrow-up-right"></i>Ver Projeto
                             </a>
-                            <a href="https://github.com/samuelllinhares/lp-music" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 bg-gray-700 hover:bg-gray-900 text-white px-4 py-2 rounded transition">
+                            <a href="https://github.com/SamuelLacerdaRB/lp-music" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 bg-gray-700 hover:bg-gray-900 text-white px-4 py-2 rounded transition">
                                 <i class="bi bi-github"></i>Ver Código
                             </a>
                         </div>
@@ -115,7 +115,7 @@
                 </p>
                 <p class="mb-4 flex items-center justify-center gap-2">
                     <i class="bi bi-github text-blue-600"></i>
-                    <a href="https://github.com/samuelllinhares" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">github.com/samuelllinhares</a>
+                    <a href="https://github.com/SamuelLacerdaRB" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">https://github.com/SamuelLacerdaRB</a>
                 </p>
                 <p class="flex items-center justify-center gap-2">
                     <i class="bi bi-linkedin text-blue-600"></i>
