--- a/index.html
+++ b/index.html
@@ -2,107 +2,124 @@
 <html lang="pt-BR">
     <head>
         <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Samuel Lacerda - PHP Full Stack Júnior</title>
         <!-- SEO Básico -->
-        <meta name="description" content="Portfólio de Samuel Lacerda, Desenvolvedor PHP Full Stack Júnior, com projetos em PHP, MVC, MySQL, jQuery e CSS." />
+        <meta name="description" content="Portfólio de Samuel Lacerda, Desenvolvedor PHP Full Stack Júnior." />
         <meta name="author" content="Samuel Lacerda" />
         <meta name="keywords" content="Portfólio, Desenvolvedor PHP, Full Stack, MVC, MySQL, jQuery, CSS, Projetos" />
+        <!-- Fontes e estilos -->
         <script src="https://cdn.tailwindcss.com"></script>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
-        <link href="assets/css/style.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+        <link href="assets/css/style.css" rel="stylesheet" />
     </head>
-
-    <body class="bg-gray-50 text-gray-800">
-        <!-- Header fixo no topo -->
+    <body class="bg-gray-50 text-gray-800 font-sans">
+        <!-- Header -->
         <header class="sticky top-0 z-50 bg-gradient-to-r from-blue-700 to-blue-900 text-white py-6 shadow-lg">
-            <div class="container mx-auto px-4 text-center md:text-left flex flex-col md:flex-row items-center justify-between gap-4">
+            <div class="container mx-auto px-4 flex flex-col md:flex-row items-center justify-between gap-4">
                 <div>
                     <h1 class="text-3xl md:text-4xl font-bold">Samuel Lacerda</h1>
                     <p class="text-sm md:text-lg mt-1 md:mt-0">Desenvolvedor PHP Full Stack Júnior</p>
                 </div>
                 <nav class="space-x-6 text-sm md:text-base font-medium">
-                    <a href="#sobre" class="hover:underline nav-link">Sobre</a>
-                    <a href="#habilidades" class="hover:underline nav-link">Habilidades</a>
-                    <a href="#projetos" class="hover:underline nav-link">Projetos</a>
-                    <a href="#contato" class="hover:underline nav-link">Contato</a>
+                    <a href="#sobre" class="hover:underline nav-link" aria-label="Ir para seção Sobre">Sobre</a>
+                    <a href="#habilidades" class="hover:underline nav-link" aria-label="Ir para seção Habilidades">Habilidades</a>
+                    <a href="#projetos" class="hover:underline nav-link" aria-label="Ir para seção Projetos">Projetos</a>
+                    <a href="#curriculo" class="hover:underline nav-link" aria-label="Ir para seção Currículo">Currículo</a>
+                    <a href="#contato" class="hover:underline nav-link" aria-label="Ir para seção Contato">Contato</a>
                 </nav>
             </div>
         </header>
-        <!-- Sobre Mim -->
+        <!-- Sobre -->
         <section id="sobre" class="container mx-auto px-4 py-16 fade-in">
             <h2 class="text-3xl font-bold text-center mb-6">Sobre Mim</h2>
-            <p class="max-w-3xl mx-auto text-center text-lg leading-relaxed">
-                Trabalho com PHP desde junho de 2023, começando como estagiário e, a partir de julho de 2025, atuando como profissional PJ. Atualmente, sou responsável por ajustar e aprimorar sistemas internos, criando relatórios, gráficos e exportações para CSV e Excel, além de gerar QR Codes para URLs conforme a necessidade.
-                <br /><br />
-                Desenvolvo seguindo o padrão MVC, estruturando Model, View e Controller para garantir organização e escalabilidade no código. Também trabalho com Ajax, JavaScript, jQuery e CSS para construir interfaces dinâmicas e responsivas.
-                <br /><br />
-                Tenho experiência em manipulação de bancos de dados, inserindo e recuperando informações para alimentar as funcionalidades mencionadas. Além disso, utilizo JSON para integração e verificação de APIs externas, garantindo a troca de dados eficiente entre sistemas.
-                <br /><br />
-                Sou apaixonado por código limpo, funcional e com boa usabilidade, sempre buscando soluções que agreguem valor ao negócio e facilitem o trabalho da equipe.
-            </p>
+            <div class="max-w-3xl mx-auto text-center text-lg leading-relaxed space-y-6">
+                <p>
+                    Trabalho com <strong>PHP</strong> desde junho de 2023, iniciando como estagiário e, a partir de julho de 2025, atuando como profissional PJ. Atualmente, sou responsável por ajustar e aprimorar sistemas internos, desenvolvendo <strong>relatórios, gráficos</strong> e exportações para <strong>CSV</strong> e <strong>Excel</strong>, além de gerar <strong>QR Codes</strong> conforme a necessidade.
+                </p>
+                <p>
+                    Desenvolvo seguindo o padrão <strong>MVC</strong>, estruturando <strong>Model, View</strong> e <strong>Controller</strong> para garantir organização e escalabilidade no código. Também utilizo <strong>Ajax, JavaScript, jQuery</strong> e <strong>CSS</strong> para construir interfaces <strong>dinâmicas e responsivas</strong>.
+                </p>
+                <p>
+                    Tenho experiência sólida em <strong>bancos de dados</strong>, manipulando informações com consultas otimizadas, inserções e atualizações para alimentar as funcionalidades do sistema. Além disso, utilizo <strong>JSON</strong> para <strong>integrações com APIs externas</strong>, garantindo uma comunicação eficiente entre aplicações.
+                </p>
+                <p>
+                    Sou dedicado a escrever <strong>código limpo</strong>, funcional e com boa usabilidade. Busco sempre entregar soluções que agreguem valor ao negócio e facilitem o trabalho da equipe. 🚀
+                </p>
+            </div>
         </section>
-
         <!-- Habilidades -->
         <section id="habilidades" class="bg-white py-16 fade-in">
             <div class="container mx-auto px-4">
                 <h2 class="text-3xl font-bold text-center mb-10">Habilidades</h2>
                 <p class="max-w-3xl mx-auto text-center mb-10 text-lg leading-relaxed">
-                    Possuo conhecimento sólido em desenvolvimento backend e frontend, com foco em linguagens e ferramentas que facilitam a criação de sistemas eficientes, escaláveis e com boa usabilidade.
+                    Conhecimento sólido em backend e frontend com foco em sistemas escaláveis e eficientes.
                 </p>
                 <div class="grid grid-cols-2 md:grid-cols-4 gap-6 text-center">
-                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">PHP</div>
-                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">MySQL</div>
-                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">
-                        MVC <span style="opacity: 0.7; font-size: 0.75rem; display: block;">(Model-View-Controller)</span>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition flex flex-col items-center">
+                        <i class="bi bi-file-code text-2xl text-blue-700 mb-2"></i>PHP
                     </div>
-                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">jQuery & AJAX</div>
-                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">JavaScript</div>
-                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">CSS & HTML</div>
-                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">Bootstrap</div>
-                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition">JSON & APIs</div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition flex flex-col items-center">
+                        <i class="bi bi-database text-2xl text-blue-700 mb-2"></i>MySQL
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition flex flex-col items-center">
+                        <i class="bi bi-layers text-2xl text-blue-700 mb-2"></i>MVC
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition flex flex-col items-center">
+                        <i class="bi bi-arrow-left-right text-2xl text-blue-700 mb-2"></i>jQuery & AJAX
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition flex flex-col items-center">
+                        <i class="bi bi-braces text-2xl text-blue-700 mb-2"></i>JavaScript
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition flex flex-col items-center">
+                        <i class="bi bi-code-slash text-2xl text-blue-700 mb-2"></i>HTML & CSS
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition flex flex-col items-center">
+                        <i class="bi bi-bootstrap text-2xl text-blue-700 mb-2"></i>Bootstrap
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow hover:shadow-lg transition flex flex-col items-center">
+                        <i class="bi bi-diagram-3 text-2xl text-blue-700 mb-2"></i>JSON & APIs
+                    </div>
                 </div>
             </div>
         </section>
-
         <!-- Projetos -->
         <section id="projetos" class="container mx-auto px-4 py-16 fade-in">
             <h2 class="text-3xl font-bold text-center mb-10">Projetos</h2>
             <div class="grid md:grid-cols-2 gap-8">
-                <!-- LP -->
                 <div class="bg-white rounded-lg shadow transition transform hover:scale-105 hover:shadow-2xl overflow-hidden">
                     <div class="rounded-t-lg overflow-hidden h-52">
-                        <img src="assets/img/lp-music.png" alt="LP Música" class="w-full h-full object-cover object-center" />
+                        <img src="assets/img/lp-music.png" alt="Landing Page para escola de música" loading="lazy" class="w-full h-full object-cover object-top" />
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold mb-2">Landing Page - Escola de Musica</h3>
-                        <p class="mb-4">LP desenvolvida para divulgação de aulas de música online e presenciais.</p>
+                        <h3 class="text-xl font-bold mb-2">Landing Page - Escola de Música</h3>
+                        <p class="mb-4">LP para divulgação de aulas de música online e presenciais.</p>
                         <div class="flex gap-3">
-                            <a href="https://samuellacerdarb.github.io/lp-music/" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 bg-blue-600 hover:bg-blue-800 text-white px-4 py-2 rounded transition">
+                            <a href="https://samuellacerdarb.github.io/lp-music/" target="_blank" class="flex items-center gap-2 bg-blue-600 hover:bg-blue-800 text-white px-4 py-2 rounded transition">
                                 <i class="bi bi-box-arrow-up-right"></i>Ver Projeto
                             </a>
-                            <a href="https://github.com/SamuelLacerdaRB/lp-music" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 bg-gray-700 hover:bg-gray-900 text-white px-4 py-2 rounded transition">
+                            <a href="https://github.com/SamuelLacerdaRB/lp-music" target="_blank" class="flex items-center gap-2 bg-gray-700 hover:bg-gray-900 text-white px-4 py-2 rounded transition">
                                 <i class="bi bi-github"></i>Ver Código
                             </a>
                         </div>
                     </div>
                 </div>
-                <!-- Sistema -->
                 <div class="bg-white rounded-lg shadow transition transform hover:scale-105 hover:shadow-2xl overflow-hidden">
                     <div class="rounded-t-lg overflow-hidden h-52">
-                        <img src="assets/img/sistem-music.png" alt="Sistema Escola de Música" class="w-full h-full object-cover object-center" />
+                        <img src="assets/img/sistem-music.png" alt="Sistema interno escola de música" loading="lazy" class="w-full h-full object-cover object-top" />
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2">Sistema de Escola de Música</h3>
-                        <p class="mb-4">Sistema interno em PHP MVC para gestão de alunos, matérias e instrumentos.</p>
+                        <p class="mb-4">Sistema interno MVC para gestão de alunos, matérias e instrumentos.</p>
                         <div class="flex gap-3">
-                            <a href="https://music-class.infinityfree.me/login" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 bg-blue-600 hover:bg-blue-800 text-white px-4 py-2 rounded transition">
+                            <a href="https://music-class.infinityfree.me/login" target="_blank" class="flex items-center gap-2 bg-blue-600 hover:bg-blue-800 text-white px-4 py-2 rounded transition">
                                 <i class="bi bi-box-arrow-up-right"></i>Ver Projeto
                             </a>
                         </div>
                     </div>
-                </div> 
+                </div>
             </div>
         </section>
         <!-- Contato -->
@@ -115,11 +132,11 @@
                 </p>
                 <p class="mb-4 flex items-center justify-center gap-2">
                     <i class="bi bi-github text-blue-600"></i>
-                    <a href="https://github.com/SamuelLacerdaRB" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">https://github.com/SamuelLacerdaRB</a>
+                    <a href="https://github.com/SamuelLacerdaRB" target="_blank" class="text-blue-600 hover:underline">github.com/SamuelLacerdaRB</a>
                 </p>
                 <p class="flex items-center justify-center gap-2">
                     <i class="bi bi-linkedin text-blue-600"></i>
-                    <a href="https://www.linkedin.com/in/samuel-lacerda-ribeiro-bruno-1a9329193/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">linkedin.com/in/samuel-lacerda-ribeiro-bruno</a>
+                    <a href="https://www.linkedin.com/in/samuel-lacerda-ribeiro-bruno-1a9329193/" target="_blank" class="text-blue-600 hover:underline">linkedin.com/in/samuel-lacerda-ribeiro-bruno</a>
                 </p>
             </div>
         </section>
@@ -129,6 +146,7 @@
         </footer>
         <!-- Botão voltar ao topo -->
         <button id="btnTop" aria-label="Voltar ao topo" title="Voltar ao topo">↑</button>
+        <!-- Scripts -->
         <script src="assets/js/script.js"></script>
     </body>
 </html>
