--- a/index.html
+++ b/index.html
@@ -122,6 +122,14 @@
                 </div>
             </div>
         </section>
+        <!-- Currículo -->
+        <section id="curriculo" class="container mx-auto px-4 py-16 fade-in text-center">
+            <h2 class="text-3xl font-bold mb-6">Currículo</h2>
+            <p class="text-lg mb-6">Baixe meu currículo completo em PDF.</p>
+            <a href="assets/pdf/curriculo.pdf" download class="inline-flex items-center gap-2 bg-blue-600 hover:bg-blue-800 text-white px-6 py-3 rounded-lg transition font-semibold">
+                <i class="bi bi-download"></i> Baixar Currículo
+            </a>
+        </section>
         <!-- Contato -->
         <section id="contato" class="bg-white py-16 fade-in">
             <div class="container mx-auto px-4 text-center max-w-lg">
