ajustes nos links de header

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <h1 class="text-3xl md:text-4xl font-bold">Samuel Lacerda</h1>
                     <p class="text-sm md:text-lg mt-1 md:mt-0">Desenvolvedor PHP Full Stack Júnior</p>
                 </div>
-                <nav class="space-x-6 text-sm md:text-base font-medium">
+                <nav class="flex flex-wrap gap-x-4 gap-y-2 text-sm md:text-base font-medium">
                     <a href="#sobre" class="hover:underline nav-link" aria-label="Ir para seção Sobre">Sobre</a>
                     <a href="#habilidades" class="hover:underline nav-link" aria-label="Ir para seção Habilidades">Habilidades</a>
                     <a href="#projetos" class="hover:underline nav-link" aria-label="Ir para seção Projetos">Projetos</a>
