--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-N3C1RJF5C2"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-N3C1RJF5C2');
+        </script>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,24 +20,24 @@
         <meta name="keywords" content="Portfólio, Desenvolvedor PHP, Full Stack, MVC, MySQL, jQuery, CSS, Projetos" />
         <!-- Fontes e estilos -->
         <script src="https://cdn.tailwindcss.com"></script>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=Roboto+Mono&display=swap" rel="stylesheet" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
         <link href="assets/css/style.css" rel="stylesheet" />
     </head>
     <body class="bg-gray-50 text-gray-800 font-sans">
         <!-- Header -->
-        <header class="sticky top-0 z-50 bg-gradient-to-r from-blue-700 to-blue-900 text-white py-6 shadow-lg">
-            <div class="container mx-auto px-4 flex flex-col md:flex-row items-center justify-between gap-4">
+        <header class="sticky top-0 z-50 bg-white/70 backdrop-blur-md shadow-md">
+            <div class="container mx-auto px-4 py-4 flex flex-wrap items-center justify-between">
                 <div>
-                    <h1 class="text-3xl md:text-4xl font-bold">Samuel Lacerda</h1>
-                    <p class="text-sm md:text-lg mt-1 md:mt-0">Desenvolvedor PHP Full Stack Júnior</p>
+                    <h1 class="text-2xl md:text-3xl font-bold text-blue-700">Samuel Lacerda</h1>
+                    <p class="text-sm md:text-base">Dev PHP Full Stack Júnior</p>
                 </div>
-                <nav class="flex flex-wrap gap-x-4 gap-y-2 text-sm md:text-base font-medium">
-                    <a href="#sobre" class="hover:underline nav-link" aria-label="Ir para seção Sobre">Sobre</a>
-                    <a href="#habilidades" class="hover:underline nav-link" aria-label="Ir para seção Habilidades">Habilidades</a>
-                    <a href="#projetos" class="hover:underline nav-link" aria-label="Ir para seção Projetos">Projetos</a>
-                    <a href="#curriculo" class="hover:underline nav-link" aria-label="Ir para seção Currículo">Currículo</a>
-                    <a href="#contato" class="hover:underline nav-link" aria-label="Ir para seção Contato">Contato</a>
+                <nav class="flex flex-wrap gap-4 text-sm md:text-base font-medium whitespace-nowrap">
+                    <a href="#sobre" class="nav-link hover:text-blue-700 transition">Sobre</a>
+                    <a href="#habilidades" class="nav-link hover:text-blue-700 transition">Habilidades</a>
+                    <a href="#projetos" class="nav-link hover:text-blue-700 transition">Projetos</a>
+                    <a href="#curriculo" class="nav-link hover:text-blue-700 transition">Currículo</a>
+                    <a href="#contato" class="nav-link hover:text-blue-700 transition">Contato</a>
                 </nav>
             </div>
         </header>
