Clean up index.html by removing commented code..
Removed commented-out section for project display.

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="bg-white rounded-lg shadow transition transform hover:scale-105 hover:shadow-2xl overflow-hidden">
+                <!-- <div class="bg-white rounded-lg shadow transition transform hover:scale-105 hover:shadow-2xl overflow-hidden">
                     <div class="rounded-t-lg overflow-hidden h-52">
                         <img src="assets/img/sistem-music.png" alt="Sistema interno escola de música" loading="lazy" class="w-full h-full object-cover object-top" />
                     </div>
@@ -128,7 +128,7 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
         <!-- Currículo -->
